# gnosis_vpn-toolkit

./: .envrc  .gitignore  Cargo.toml  README.md  deny.toml  flake.nix  justfile  renovate.json  rustfmt.toml  taplo.toml
.cargo/: audit.toml  config.toml
.github/workflows/: merge.yaml  pr.yml  release.yaml
gnosis_vpn-update/: Cargo.toml
gnosis_vpn-update/src/: cli.rs  lib.rs  logging.rs  main.rs  manifest.rs  output.rs  vpn_status.rs
gnosis_vpn-update/src/update/: apt.rs  choices.rs  mod.rs  paths.rs
gnosis_vpn-update/tests/fixtures/: linux-arm64.json  linux-arm64.json.asc  macos-arm64.json.asc
nix/: toolkit.nix
src/: cli.rs  lib.rs  main.rs
src/update/: mod.rs  paths.rs
tests/fixtures/: linux-amd64.json  linux-amd64.json.asc  macos-arm64.json
