# Single-crate repo that also acts as its own Cargo workspace root, so the
# Nix/CI scaffolding (which reads the [workspace.*] tables) transfers cleanly
# from gnosis_vpn-client while there is still exactly one crate → one binary.
[package]
name    = "gnosis_vpn-toolkit"
edition = { workspace = true }
license = { workspace = true }
version = { workspace = true }

[lib]
name    = "gnosis_vpn_toolkit"
path    = "src/lib.rs"
doctest = false

[[bin]]
name = "gnosis_vpn-toolkit"
path = "src/main.rs"

[workspace]

[workspace.package]
edition = "2024"
license = "LGPL-3.0"
version = "0.1.0"

[workspace.metadata.crane]
name = "gnosis_vpn-toolkit"

[workspace.dependencies]
anyhow     = { version = "~1.0.102" }
bytesize   = { version = "~2.4.0", features = ["serde"] }
chrono     = { version = "~0.4.45", default-features = false, features = ["clock", "serde", "std"] }
clap       = { version = "~4.6.1", features = ["derive", "env"] }
exitcode   = "~1.1.2"
libc       = "~0.2.186"
reqwest    = { version = "~0.13.4", features = ["json"] }
serde      = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.150"
serde_with = { version = "~3.21.0", features = ["hex"] }
sha2       = "~0.10.8"
thiserror  = "~2.0.18"
tikv-jemallocator = "~0.7.0"
tokio = { version = "~1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "sync",
  "process",
  "net",
  "fs",
  "io-util",
  "time",
] }
tracing            = { version = "~0.1.44", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "~0.3.23", features = ["env-filter"] }
url                = { version = "~2.5.8", features = ["serde"] }

[dependencies]
anyhow             = { workspace = true }
bytesize           = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
exitcode           = { workspace = true }
reqwest            = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
serde_with         = { workspace = true }
thiserror          = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
url                = { workspace = true }

# Avoid musl's default allocator due to degraded performance.
[target.'cfg(target_os = "linux")'.dependencies]
tikv-jemallocator = { workspace = true }

# sha2 (artifact verification) and libc (statvfs free-space probe) are only used
# on the macOS install path; on Linux the update goes through apt.
[target.'cfg(not(target_os = "linux"))'.dependencies]
libc = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

# this profile focuses on the best runtime performance and the smallest binary size
[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = true
