# Virtual Cargo workspace for the gnosis_vpn-toolkit — a collection of
# independent companion binaries for the Gnosis VPN client. Each binary is its
# own member crate under a `gnosis_vpn-*` directory (the first is
# `gnosis_vpn-update`, the self-updater). Shared build/CI scaffolding
# (Nix/nix-lib, deny.toml, taplo, etc.) lives at this root, mirroring the
# sibling gnosis_vpn-client workspace.
[workspace]
members  = ["gnosis_vpn*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "LGPL-3.0"
version = "0.1.0"

# nix-lib/crane derives the umbrella pname from this (the workspace is virtual,
# so there is no root [package] to read). No member is named exactly
# `gnosis_vpn-toolkit`; the per-binary Nix outputs select their target with
# `--bin` and `prependPackageName = false`.
[workspace.metadata.crane]
name = "gnosis_vpn-toolkit"

[workspace.dependencies]
anyhow = { version = "~1.0.102" }
bytesize = { version = "~2.4.0", features = ["serde"] }
chrono = { version = "~0.4.45", default-features = false, features = [
  "clock",
  "serde",
  "std",
] }
clap = { version = "~4.6.1", features = ["derive", "env"] }
exitcode = "~1.1.2"
libc = "~0.2.186"
reqwest = { version = "~0.13.4", features = ["json"] }
serde = { version = "~1.0.228", features = ["derive"] }
serde_json = "~1.0.150"
serde_with = { version = "~3.21.0", features = ["hex"] }
sha2 = "~0.10.8"
thiserror = "~2.0.18"
tokio = { version = "~1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "process",
  "rt-multi-thread",
  "sync",
  "time",
] }
tracing = { version = "~0.1.44", features = ["release_max_level_debug"] }
tracing-subscriber = { version = "~0.3.23", features = ["env-filter"] }
url = { version = "~2.5.8", features = ["serde"] }

# this profile focuses on the best runtime performance and the smallest binary
# size (profiles are honored only at the workspace root)
[profile.release]
codegen-units = 1
lto           = "fat"
opt-level     = 3
panic         = "abort"
strip         = true
